# pyirena

./: .gitignore  CHANGELOG.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  CURSOR_IMPLEMENTATION_FINAL.md  FILE_SUMMARY.txt  GITHUB_SETUP.md  GUI_QUICKSTART.md  IMPROVEMENT_PLAN.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  PACKAGE_STRUCTURE.md  QUICK_START_NEW_FEATURES.md  README.md  README_unified.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  TESTING_GUI.md  UNIFIED_FIT_GUI.md  environment.yml  notes.txt  pyproject.toml  requirements.txt  setup.py  test_pyqtgraph_unified.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml  tests.yml.disabled
codeFragments/: README.md  convert_to_dat.py  create_test_data.py  hdf5code.py  test_unified_gui.py  unified.py
conda/: meta.yaml
docs/: CHANGELOG_archive.md  GUI_README.md  HDF5_NxcanSAS_structure.md  HDF5_Structure_Reference.md  QUICK_START.md  ai_integration.md  ai_tools_reference.md  batch_api.md  data_import_and_cleaning.md  data_manipulation_gui.md  data_merge_gui.md  developer_adding_features.md  developer_adding_form_factors.md  developer_adding_structure_factors.md  distribution.md  feature_identifier.md  fit_quality_metrics.md  fractals_gui.md  gui_quickstart.md  hdf5_viewer_gui.md  igor_pxp_import.md  installation.md  modeling_gui.md  saxs_morph_gui.md  saxs_morph_method_comparison.md  scattering_contrast_gui.md  simple_fits_gui.md  sizes_methods.md  slit_smearing.md  testing.md  unified_fit_features.md  unified_fit_gui.md  usage_guide.md  waxs_peakfit_gui.md
planning/ai-agent/: 00-overall-plan.md  01-api-and-mcp-extensions.md  02-standalone-ai-app.md  03-ai-advisor-in-gui.md  04-fit-quality-metrics.md  05-fit-quality-metrics-implementation-plan.md  README.md  phase-1-unified-fit-control.md
planning/slit-smearing/: CODE_REVIEW.md  PLAN.md
pyirena/: __init__.py  batch.py  logging_setup.py  version_check.py
pyirena/api/: README.md  __init__.py  _paths.py  aggregate.py  data.py  discovery.py  plotting.py  results.py  schemas.py
pyirena/api/control/: __init__.py  errors.py  schemas.py  session.py  sizes.py  unified_fit.py
pyirena/batch/: __init__.py  _common.py  convert.py  manipulate.py  merge.py  modeling.py  pipeline.py  saxs_morph.py  simple.py  sizes.py  unified.py  waxs.py
pyirena/core/: __init__.py  data_manipulation.py  data_merge.py  diffraction_lines.py  distributions.py  feature_detect.py  fit_metrics.py  form_factors.py  fractals.py  modeling.py  morphology.py  saxs_morph.py  scattering_contrast.py  similarity.py  simple_fits.py  sizes.py  smearing.py  unified.py  waxs_peakfit.py
pyirena/examples/: __init__.py  basic_demo.py
pyirena/gui/: __init__.py  _qt.py  ai_advisor.py  contrast_panel.py  data_loading.py  data_manipulation_panel.py  data_merge_panel.py  data_selector.py  diffraction_lines_panel.py  feature_identifier.py  fmt_utils.py  fractals_panel.py  fractals_workers.py  launch.py  modeling_panel.py  quality_display.py  sas_plot.py  saxs_morph_3d.py  saxs_morph_panel.py  setup_loader.py  simple_fits_panel.py  sizes_feature_identifier.py  sizes_panel.py  slit_smearing_ui.py  unified_fit.py  unified_fit_matplotlib_old.py  waxs_peakfit_panel.py
pyirena/gui/ai_skills/: modeling.md  unified_fit.md
pyirena/gui/data_selector/: __init__.py  (+9 more)
pyirena/io/: NXcanSAS_UnifiedFit_Format.md  __init__.py  _nxcansas_common.py  ascii_export.py  contrast_io.py  h5xp_extractor.py  h5xp_writer.py  hdf5.py  igor_names.py  nxcansas_data_manipulation.py  nxcansas_data_merge.py  nxcansas_fit_quality.py  nxcansas_fractals.py  nxcansas_modeling.py  nxcansas_saxs_morph.py  nxcansas_simple_fits.py  nxcansas_sizes.py  nxcansas_unified.py  nxcansas_waxs_peakfit.py  pxp_to_nexus.py  results.py  schema.py  setup_config.py  text_import.py
pyirena/mcp/: __init__.py  server.py
pyirena/plotting/: __init__.py  plot_saxs.py  unified_plots.py
pyirena/state/: __init__.py  state_manager.py
pyirena/tests/: __init__.py  test_core_algorithms.py  test_distributions.py  test_feature_detect.py  test_fit_metrics.py  test_form_factors.py  test_invariant.py  test_local_fits.py  test_modeling_global_fit.py  test_modeling_report_csv.py  test_nxcansas_roundtrips.py  test_optional_dep_modules.py  test_pxp_to_nexus.py  test_saxs_morph.py  test_simple_fits_models.py  test_sizes.py  test_smearing.py  test_smearing_integration.py  test_text_import.py  test_unified.py  test_version_check.py
scratch_sizes_diagnosis/: mc_diag.py  mc_display.py  plot_reg_realdata.py  plot_sizes_diagnosis.py  reg_alpha_scan.py  reg_qscan.py  test_mc_fix.py  test_sizes_mismatch.py  test_sizes_regularization.py  test_sizes_wiring.py
scripts/: batch_merge.py  diag_folder_bytes.py  diag_folders.py  diag_pxp.py  diag_tree.py  plot_sas_tree.py
testData/: BoehNaNO2_10m_34_84min_0923.h5  CoreShelltestData.h5xp  CoreShelltestData.h5xp.autosave  NewH5.h5xp  OneDist1pctLarge_NX.h5  ProperNxcanSASNexus.h5  README.md  RodSfAgg.h5  Si.cif  TestUnifiedFit.h5  batch_extract.h5xp  bimodal-test1.h5  complexUnified.h5  cs_af1410.h5  dummy_output.h5xp  fractal_aggregate.h5  hierarchical_structure.h5  real_extract.h5xp  spheres_Rg100.h5  spheres_Rg50.h5  surface_fractal.h5  test1.h5  test2.h5  test_batch.h5xp  test_h5xp_writer.py
testData/Core-shell-tests/: CSS_300A_20A_40A_solv50_core0_10_20.h5  CSS_300A_20A_40A_solv50_core0_10_20_SF450_0.3.h5  CS_300A_10A_50_20_0.h5  CS_300A_10A_50_20_0_report.md  CS_300A_30A_10_50_0.h5  CS_300A_30A_10_50_20.h5  CS_300A_30A_cor20_sh50_sol0_SF800_0.3.h5  CS_300A_60A_0_50_0.h5  pyirena_config.json
testData/StructureIdentificationExamples/: Description and task.txt  PlateWeak_NX.h5  PlateWithAggregate_NX.h5  PlateWithSFWithAGgregate_NX.h5  RodSfAgg_NX.h5  sample1.h5  sample10.h5  sample11.h5  sample12.h5  sample13.h5  sample14.h5  sample15.h5  sample16.h5  sample17.h5  sample18.h5  sample19.h5  sample2.h5  sample20.h5  sample21.h5  sample22.h5  sample23.h5  sample24.h5  sample25.h5  sample26.h5  sample27.h5  sample28.h5  sample3.h5  sample4.h5  sample5.h5  sample6.h5  sample8.h5  sample9.h5
(+22 files in other folders)
