[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyirena"
version = "0.5.6"
description = "Python tools for small-angle scattering data analysis."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jan Ilavsky", email = "ilavsky@anl.gov"}
]
maintainers = [
    {name = "Jan Ilavsky", email = "ilavsky@anl.gov"}
]
keywords = [
    "SAXS", "SANS", "USAXS", "small-angle scattering", "unified fit",
    "Beaucage", "X-ray scattering", "neutron scattering", "SAS",
    "size distribution", "core-shell", "form factor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "h5py>=3.0.0",
]

[project.optional-dependencies]
gui = [
    "matplotlib>=3.5.0",
    "PySide6>=6.4.0,!=6.7.*,!=6.10.*",
    "pyqtgraph>=0.13.0",
    "xraydb>=4.5",
    "periodictable>=1.7",
    "Dans-Diffraction>=3.0",
]
gui3d = [
    # 3D voxelgram viewer for SAXS Morph (and future 3D tools).
    # PyVista relies on VTK; no upper bound so pip can pick the latest
    # compatible wheel for the current platform.
    "pyvista>=0.45",
    "pyvistaqt>=0.11",
    "vtk>=9.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "build",
    "twine",
]
all = [
    "pyirena[gui]",
    "pyirena[gui3d]",
    "pyirena[dev]",
]

[project.urls]
Homepage = "https://github.com/jilavsky/pyirena"
Documentation = "https://github.com/jilavsky/pyirena/tree/main/docs"
Repository = "https://github.com/jilavsky/pyirena"
Changelog = "https://github.com/jilavsky/pyirena/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/jilavsky/pyirena/issues"

[project.scripts]
pyirena-gui = "pyirena.gui.launch:main"
pyirena-viewer = "pyirena.gui.hdf5viewer:main"
pyirena-modeling = "pyirena.gui.modeling_panel:main"
pyirena-datamerge = "pyirena.gui.data_merge_panel:main"
pyirena-datamanip = "pyirena.gui.data_manipulation_panel:main"
pyirena-contrast = "pyirena.gui.contrast_panel:main"
pyirena-saxsmorph = "pyirena.gui.saxs_morph_panel:main"

[tool.setuptools.packages.find]
include = ["pyirena*"]

[tool.setuptools.package-data]
pyirena = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["pyirena/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
