[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyirena"
version = "1.1.0b2"
description = "Python tools for small-angle scattering data analysis."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Jan Ilavsky", email = "ilavsky@anl.gov"}
]
maintainers = [
    {name = "Jan Ilavsky", email = "ilavsky@anl.gov"}
]
keywords = [
    "SAXS", "SANS", "USAXS", "small-angle scattering", "unified fit",
    "Beaucage", "X-ray scattering", "neutron scattering", "SAS",
    "size distribution", "core-shell", "form factor",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    # numpy.trapezoid (used throughout core/) requires NumPy >= 2.0.
    "numpy>=2.0",
    "scipy>=1.8.0",
    "h5py>=3.0.0",
    "igor2>=0.5.13",
]

[project.optional-dependencies]
gui = [
    "matplotlib>=3.5.0",
    "PySide6>=6.4.0,!=6.7.*,!=6.10.*",
    "pyqtgraph>=0.13.0",
    "xraydb>=4.5",
    "periodictable>=1.7",
    "Dans-Diffraction>=3.0",
    # AI advisor (optional — buttons hidden if not installed)
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "keyring>=24.0",
]
gui3d = [
    # 3D voxelgram viewer for SAXS Morph (and future 3D tools).
    # PyVista relies on VTK; no upper bound so pip can pick the latest
    # compatible wheel for the current platform.
    "pyvista>=0.45",
    "pyvistaqt>=0.11",
    "vtk>=9.3",
]
mcp = [
    # MCP server exposing pyirena.api to AI clients (Claude Desktop, Claude
    # Code, custom agents). pyirena.api itself is dependency-free; this extra
    # adds the protocol layer + headless plotting.
    "mcp>=1.0.0",
    "matplotlib>=3.5.0",
]
plotting = [
    # Headless plotting helpers in pyirena.plotting (plot_saxs, unified/Guinier/
    # Porod overlays). Matplotlib only — no GUI toolkit required.
    "matplotlib>=3.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-timeout",
    "ruff",
    "build",
    "twine",
]
all = [
    "pyirena[gui]",
    "pyirena[gui3d]",
    "pyirena[mcp]",
    "pyirena[plotting]",
    "pyirena[dev]",
]

[project.urls]
Homepage = "https://github.com/jilavsky/pyirena"
Documentation = "https://github.com/jilavsky/pyirena/tree/main/docs"
Repository = "https://github.com/jilavsky/pyirena"
Changelog = "https://github.com/jilavsky/pyirena/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/jilavsky/pyirena/issues"

[project.scripts]
pyirena-gui = "pyirena.gui.launch:main"
pyirena-viewer = "pyirena.gui.hdf5viewer:main"
pyirena-modeling = "pyirena.gui.modeling_panel:main"
pyirena-datamerge = "pyirena.gui.data_merge_panel:main"
pyirena-datamanip = "pyirena.gui.data_manipulation_panel:main"
pyirena-contrast = "pyirena.gui.contrast_panel:main"
pyirena-saxsmorph = "pyirena.gui.saxs_morph_panel:main"
pyirena-mcp = "pyirena.mcp.server:main"

[tool.setuptools.packages.find]
include = ["pyirena*"]
# The test suite is not shipped in the built distributions — end users don't
# need ~255 KB of tests. Developers and the conda recipe build from the git /
# GitHub source archive, which still carries them. (MANIFEST.in also no longer
# recursive-includes the tests, so include-package-data can't pull them in.)
exclude = ["pyirena.tests*"]

[tool.setuptools.package-data]
pyirena = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["pyirena/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Per-test watchdog (pytest-timeout): a single hung test (e.g. an unmocked
# modal Qt dialog) can no longer stall the whole CI job indefinitely.
timeout = 300
timeout_method = "thread"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["codeFragments", "IgorCodeFragments", "build", "temp", "scripts", "testData"]

[tool.ruff.lint]
# Default E/F rules, minus style conventions this codebase intentionally uses:
#   E741 - "ambiguous" names like I (intensity) and l (level) are idiomatic in scattering code
#   E701/E702 - compact one-line statements used in GUI code
#   E402 - some modules must configure Qt/paths before imports
ignore = ["E741", "E701", "E702", "E402"]

[tool.ruff.lint.per-file-ignores]
"pyirena/__init__.py" = ["F401"]
"pyirena/**/__init__.py" = ["F401"]
